CHANGES:

- added Disable Sense Darkvision / Superior Darkvision settings
- fixed caster feats interaction with non-prepared casters spells unlearning
- fixed Raise Dead spells upcasting to 1 min, 10 min, 1 hour, 8 hours
- fixed Sorcerer additional slots consideration under multiclass
