@@ -733,6 +733,7 @@ AttackModifierDeadMasterUndeadChains	FeatureDefinitionAttackModifier	FeatureDefi
 AttackModifierHandAndAHalf	FeatureDefinitionAttackModifier	FeatureDefinition	d39a2a64-26af-5ef5-8355-6ec9092b4e41
 AttackModifierInfusionEnhanceWeapon	FeatureDefinitionAttackModifier	FeatureDefinition	69c1f195-9e49-5be0-b238-17442eb8a51d
 AttackModifierInfusionEnhanceWeaponUpgraded	FeatureDefinitionAttackModifier	FeatureDefinition	3181d907-270b-556e-bda6-b4e7ffab8897
+AttackModifierInfusionRepeatingShot	FeatureDefinitionAttackModifier	FeatureDefinition	cf829e07-a7ef-5b1f-9c2f-8dd97197938f
 AttackModifierInfusionReturningWeapon	FeatureDefinitionAttackModifier	FeatureDefinition	e3e41e3f-043c-5e97-8ccb-79084a364feb
 AttackModifierInnovationWeaponSummonSteelDefenderDamage	FeatureDefinitionAttackModifier	FeatureDefinition	53785f87-8b03-5ef3-a602-7ef231859a3c
 AttackModifierInnovationWeaponSummonSteelDefenderToHit	FeatureDefinitionAttackModifier	FeatureDefinition	3b7a7415-7abc-59c5-8cef-26174848a042
@@ -1328,6 +1329,7 @@ PowerInfusionEnhanceDefense	SolastaUnfinishedBusiness.CustomDefinitions.FeatureD
 PowerInfusionEnhanceWeapon	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinition	c4c32237-1e03-5c6d-b39a-fdfd9efd3991
 PowerInfusionMindSharpener	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinition	e149730a-d82d-57b2-8c0f-36ef6642478c
 PowerInfusionPool	FeatureDefinitionPower	FeatureDefinition	1c6f875b-98be-502c-91bc-cee37d423e7f
+PowerInfusionRepeatingShot	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinition	193ed2cd-4579-57c5-924d-0a0617ba7e62
 PowerInfusionResistantArmor	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinition	600c76f6-b4cf-5eee-be00-862f18d788c4
 PowerInfusionResistantArmorDamageAcid	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinition	f7b10489-8129-5dc1-9888-3a6923f0bb0a
 PowerInfusionResistantArmorDamageCold	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinition	15783d5c-19f2-5ef9-abe1-b723b52a86a9
@@ -1685,6 +1687,7 @@ AttackModifierDeadMasterUndeadChains	FeatureDefinitionAttackModifier	FeatureDefi
 AttackModifierHandAndAHalf	FeatureDefinitionAttackModifier	FeatureDefinitionAffinity	d39a2a64-26af-5ef5-8355-6ec9092b4e41
 AttackModifierInfusionEnhanceWeapon	FeatureDefinitionAttackModifier	FeatureDefinitionAffinity	69c1f195-9e49-5be0-b238-17442eb8a51d
 AttackModifierInfusionEnhanceWeaponUpgraded	FeatureDefinitionAttackModifier	FeatureDefinitionAffinity	3181d907-270b-556e-bda6-b4e7ffab8897
+AttackModifierInfusionRepeatingShot	FeatureDefinitionAttackModifier	FeatureDefinitionAffinity	cf829e07-a7ef-5b1f-9c2f-8dd97197938f
 AttackModifierInfusionReturningWeapon	FeatureDefinitionAttackModifier	FeatureDefinitionAffinity	e3e41e3f-043c-5e97-8ccb-79084a364feb
 AttackModifierInnovationWeaponSummonSteelDefenderDamage	FeatureDefinitionAttackModifier	FeatureDefinitionAffinity	53785f87-8b03-5ef3-a602-7ef231859a3c
 AttackModifierInnovationWeaponSummonSteelDefenderToHit	FeatureDefinitionAttackModifier	FeatureDefinitionAffinity	3b7a7415-7abc-59c5-8cef-26174848a042
@@ -1867,6 +1870,7 @@ AttackModifierDeadMasterUndeadChains	FeatureDefinitionAttackModifier	FeatureDefi
 AttackModifierHandAndAHalf	FeatureDefinitionAttackModifier	FeatureDefinitionAttackModifier	d39a2a64-26af-5ef5-8355-6ec9092b4e41
 AttackModifierInfusionEnhanceWeapon	FeatureDefinitionAttackModifier	FeatureDefinitionAttackModifier	69c1f195-9e49-5be0-b238-17442eb8a51d
 AttackModifierInfusionEnhanceWeaponUpgraded	FeatureDefinitionAttackModifier	FeatureDefinitionAttackModifier	3181d907-270b-556e-bda6-b4e7ffab8897
+AttackModifierInfusionRepeatingShot	FeatureDefinitionAttackModifier	FeatureDefinitionAttackModifier	cf829e07-a7ef-5b1f-9c2f-8dd97197938f
 AttackModifierInfusionReturningWeapon	FeatureDefinitionAttackModifier	FeatureDefinitionAttackModifier	e3e41e3f-043c-5e97-8ccb-79084a364feb
 AttackModifierInnovationWeaponSummonSteelDefenderDamage	FeatureDefinitionAttackModifier	FeatureDefinitionAttackModifier	53785f87-8b03-5ef3-a602-7ef231859a3c
 AttackModifierInnovationWeaponSummonSteelDefenderToHit	FeatureDefinitionAttackModifier	FeatureDefinitionAttackModifier	3b7a7415-7abc-59c5-8cef-26174848a042
@@ -2340,6 +2344,7 @@ PowerInfusionEnhanceDefense	SolastaUnfinishedBusiness.CustomDefinitions.FeatureD
 PowerInfusionEnhanceWeapon	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinitionPower	c4c32237-1e03-5c6d-b39a-fdfd9efd3991
 PowerInfusionMindSharpener	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinitionPower	e149730a-d82d-57b2-8c0f-36ef6642478c
 PowerInfusionPool	FeatureDefinitionPower	FeatureDefinitionPower	1c6f875b-98be-502c-91bc-cee37d423e7f
+PowerInfusionRepeatingShot	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinitionPower	193ed2cd-4579-57c5-924d-0a0617ba7e62
 PowerInfusionResistantArmor	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinitionPower	600c76f6-b4cf-5eee-be00-862f18d788c4
 PowerInfusionResistantArmorDamageAcid	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinitionPower	f7b10489-8129-5dc1-9888-3a6923f0bb0a
 PowerInfusionResistantArmorDamageCold	SolastaUnfinishedBusiness.CustomDefinitions.FeatureDefinitionPowerSharedPool	FeatureDefinitionPower	15783d5c-19f2-5ef9-abe1-b723b52a86a9
@@ -2918,6 +2923,7 @@ CustomInvocationInfusionEnhanceArcaneFocus	SolastaUnfinishedBusiness.CustomDefin
 CustomInvocationInfusionEnhanceDefense	SolastaUnfinishedBusiness.CustomDefinitions.InvocationDefinitionCustom	InvocationDefinition	e91e8765-1963-5db6-a2a0-46eb6003fce0
 CustomInvocationInfusionEnhanceWeapon	SolastaUnfinishedBusiness.CustomDefinitions.InvocationDefinitionCustom	InvocationDefinition	d9f76758-ed86-550e-836c-b541bbcd3bce
 CustomInvocationInfusionMindSharpener	SolastaUnfinishedBusiness.CustomDefinitions.InvocationDefinitionCustom	InvocationDefinition	92c79c1f-3d8a-50ac-92c9-8b7236e8eb92
+CustomInvocationInfusionRepeatingShot	SolastaUnfinishedBusiness.CustomDefinitions.InvocationDefinitionCustom	InvocationDefinition	66f010e2-5d90-5f1e-961f-ebd0993f4095
 CustomInvocationInfusionResistantArmor	SolastaUnfinishedBusiness.CustomDefinitions.InvocationDefinitionCustom	InvocationDefinition	2009e711-9bcd-54fd-b224-2e6740628dde
 CustomInvocationInfusionReturningWeapon	SolastaUnfinishedBusiness.CustomDefinitions.InvocationDefinitionCustom	InvocationDefinition	baeeb3f6-6593-53c4-b7fe-226b0f8acd08
 CustomInvocationShadowTouchedShadowTouchedFalseLifeCharisma	SolastaUnfinishedBusiness.CustomDefinitions.InvocationDefinitionCustom	InvocationDefinition	32f9b581-3d46-5d49-bc4a-9113941fc7fd
