@@ -1,0 +1,63 @@
+{
+  "$type": "FeatureDefinitionAttackModifier, Assembly-CSharp",
+  "triggerCondition": "AlwaysActive",
+  "requiredProperty": "None",
+  "attackRollModifierMethod": "FlatValue",
+  "attackRollUseCasterBonus": false,
+  "attackRollModifier": 1,
+  "attackRollAbilityScore": "",
+  "damageRollModifierMethod": "FlatValue",
+  "damageRollUseCasterBonus": false,
+  "damageRollModifier": 1,
+  "damageRollAbilityScore": "",
+  "additionalDamageDice": 0,
+  "canDualWieldNonLight": false,
+  "canAddAbilityBonusToSecondary": false,
+  "magicalWeapon": true,
+  "followUpStrike": false,
+  "followUpDamageDie": "D4",
+  "followUpAddAbilityBonus": true,
+  "additionalBonusAttackFromMain": false,
+  "additionalBonusUnarmedStrikeAttacksFromMain": false,
+  "additionalBonusUnarmedStrikeAttacksCount": 0,
+  "additionalBonusUnarmedStrikeAttacksTag": null,
+  "additionalReturnMissileReactionAttack": false,
+  "additionalBonusSoraksBaneAttack": false,
+  "additionalMonsterAttack": false,
+  "additionalMonsterAttacksCount": 0,
+  "abilityScoreReplacement": "None",
+  "damageDieReplacement": "None",
+  "dieTypeByRankTable": [],
+  "replacedDieType": "D8",
+  "additionalEffectForms": [],
+  "impactParticleReference": null,
+  "myselfFamilyRestrictions": [],
+  "otherCharacterFamilyRestrictions": [],
+  "guiPresentation": {
+    "$type": "GuiPresentation, Assembly-CSharp",
+    "hidden": false,
+    "title": "Feature/&InfusionRepeatingShotTitle",
+    "description": "Feature/&InfusionRepeatingShotDescription",
+    "spriteReference": {
+      "$type": "UnityEngine.AddressableAssets.AssetReferenceSprite, Unity.Addressables",
+      "m_AssetGUID": "1271ee70f08ae0a48aadee92f223ea8b",
+      "m_SubObjectName": "Jump",
+      "m_SubObjectType": "UnityEngine.Sprite, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null"
+    },
+    "color": {
+      "$type": "UnityEngine.Color, UnityEngine.CoreModule",
+      "r": 1.0,
+      "g": 1.0,
+      "b": 1.0,
+      "a": 1.0
+    },
+    "symbolChar": "221E",
+    "sortOrder": 0,
+    "unusedInSolastaCOTM": false,
+    "usedInValleyDLC": false
+  },
+  "contentCopyright": "UserContent",
+  "guid": "cf829e07-a7ef-5b1f-9c2f-8dd97197938f",
+  "contentPack": 9999,
+  "name": "AttackModifierInfusionRepeatingShot"
+}
